--- a/components/Projects/projects.css
+++ b/components/Projects/projects.css
@@ -71,11 +71,14 @@
   height: auto;
 }
 .media-element__title {
-  font-size: var(--font-size-fluid-0);
+  font-size: var(--font-size-0);
+  color: var(--text1);
+  font-weight: var(--font-weight-6);
 }
 
 .media-element__btn {
-  font-size: var(--font-size-fluid-0);
+  font-size: var(--font-size-0);
+  font-weight: var(--font-weight-6);
   padding-inline: var(--size-1);
   padding-block: var(--size-1);
   border-radius: var(--radius-2);
